# Reversi

./: CMakeLists.txt  board.cpp  board.hpp  game_eg.cpp  game_eg.hpp  main.cpp  message.cpp  message.hpp
